Add comment about shared SASS content

--- a/src/assets/styles/sass-resources.scss
+++ b/src/assets/styles/sass-resources.scss
@@ -1,2 +1,7 @@
+// Also you can import here some other files with variables / mixins / functions to share it
+// with all .scss files. For example:
+//
+// @import "~bootstrap/scss/variables";
+
 $primary: red;
 $secondary: blue;
